--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@
 
 body {
     background-color: var(--background-primary);
-    margin: auto;
+   
     
     
     
@@ -146,41 +146,120 @@ input {
 
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 
 
 form {
     display: flex;
     flex-direction: row;
     gap: 8px;
-    align-items: center;
-    text-align: center;
+    justify-content: center;
+    
+    
+    
     
 }
 
 
 
+.result {
+   /* border: 1px solid red; */
+   max-width: 100%;
+   height: 100vh;
+   display: flex;
+   align-items: center;
+    
 
-.item {
-    max-width: 400px;
-    margin: auto;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 10px;
+
+}
+
+ul {
+
+display: flex;
+flex-direction: column;
+list-style: none;
+width: 627px;
+height: 100vh;
+gap: 12px;
+border-radius: 12px;
+
+
+
+
+
+
+
+
+}
+
+li {
+   
+    height: 70px;
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
-    font-size: 16px;
-    width: 100%;
-    height: auto;
+    align-items: center;
+    background: white;
+    
     
 }
 
 
-#hide {
+
+
+span {
+    font-family: 'Inter', 'sans-serif';
+    padding-inline: 10px;
+}
+
+
+.button {
+    
+    background-color: transparent;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.hide {
     display: none;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
