--- a/styles/style.css
+++ b/styles/style.css
@@ -77,14 +77,23 @@ header {
 
 
 div {
-    
     display: flex;
     flex-direction: column;
     padding: 20px;
-    padding-inline: 500px;
+    padding-inline: 5%; 
     gap: 24px;
-    
+    margin: auto;
+    max-width: 1200px;
+    width: 100%; 
 }
+
+
+@media (max-width: 768px) {
+    div {
+        padding-inline: 20px; 
+    }
+}
+
 
 
 main {
@@ -167,112 +176,60 @@ form {
 }
 
 
-
-.result {
-   /* border: 1px solid red; */
-   max-width: 100%;
-   height: 100vh;
-   display: flex;
-   align-items: center;
-    
-
-
-}
-
 ul {
-
-display: flex;
-flex-direction: column;
-list-style: none;
-width: 627px;
-height: 100vh;
-gap: 12px;
-
-
-
-
-
-
-
-
-
-
-
-
+    
+    
+    height: 232px;
+    width: 627px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    align-items: center;
+    margin-top: 20px;
+    
 }
+
 
 li {
-   
-    height: 70px;
+    background-color: var(--background-secondary);
+    width: 500px;
+    height: 49px;
+    border-radius: 12px;
+    list-style: none;
+    display: flex;
+    
+    align-items: center;
+    gap: 12px;
+    padding: 12px;
+    
+    
+    
+    
+
+}
+
+span {
+    font-family: 'inter';
+    color: var(--content-secondary);
+    padding: 8px 10px;
+    width: 503px;
+    height: 33px;
     display: flex;
     align-items: center;
 
-    background-color:var(--background-secondary);
-    border-radius: 12px;
-    
-    
-   
-    
-    
 }
 
-
-
-
-.result span {
-font-family: 'Inter', 'sans-serif';
-display: flex;
-flex-direction: row;
-align-items: center;
-padding: 8px 12px;
-gap: 12px;
-
-width: 627px;
-height: 49px;
-
-background: #FFFFFF;
-border-radius: 12px;
-
-
-}
-
-
-
-.result button {
-    display: flex;
-    
-    
-    background-color: transparent;
+button {
+    width: 32px;
+    height: 32px;
+    background-color: #FFFFFF;
     border: none;
-    
-    
-    cursor: pointer;
-    
-
-    
-    
-    
-   
-
-}
-
-.result button img {
-    height: 20px;
-    width: 20px;
-    
+    padding: auto;
+    display: flex;
+    align-items: center;
+    margin-right: 12px;
     
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -280,6 +237,18 @@ border-radius: 12px;
 .hide {
     display: none;
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
