--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,7 @@
 }
 
 body {
-    background-color: var(--background-primary);
+    background-color: #d1e7fd;
    
     
     
@@ -144,6 +144,7 @@ input {
     font-family: "Inter", sans-serif;
     font-size: 1rem;
     padding: 0px 18px;
+    cursor: pointer;
     
    
 
@@ -228,6 +229,7 @@ button {
     display: flex;
     align-items: center;
     margin-right: 12px;
+    cursor: pointer;
     
 }
 
